Dropped support of old-qualifier (#869)